--- a/_data/itgm6_communities.yml
+++ b/_data/itgm6_communities.yml
@@ -78,7 +78,7 @@
      "15:00" :
        speaker : "Ильшад Хабибуллин"
        work_place : "-"
-       theme : "Тема учтоняется..."
+       theme : "Тема уточняется..."
        is_discussion: 0     
        speaker_ava: nan.jpg    
      "16:00" :
