--- a/_data/itgm6_communities.yml
+++ b/_data/itgm6_communities.yml
@@ -34,8 +34,8 @@
   schedule:
 
      "13:00" :
-       speaker : Александр Шорин
-       work_place : TicketsCloud
+       speaker : "Александр Шорин"
+       work_place : "TicketsCloud"
        theme : "QuickCheck в Python: проверка гипотез и поиск ошибок."
        is_discussion: 0     
        speaker_ava: python_shorin.jpeg    
@@ -45,12 +45,12 @@
        theme : "Почему I/O - боль."
        is_discussion: 0     
        speaker_ava: python_timofeev.png    
-  #   "15:00" :
-  #     speaker : Андрей Павлов
-  #     work_place : "C.Nord"
-  #     theme : "Пакетный менеджер Nix в качестве замены Virtualenv."
-     #  is_discussion: 1     
-     #  speaker_ava: nan.jpg    
+     "15:00" :
+       speaker : "Максим Леонов"
+       work_place : "KudaGo"
+       theme : "Асинхронное программирование в python, как это было и что с этим стало."
+       is_discussion: 0     
+       speaker_ava: py_leonov.jpg    
      "16:00" :
        speaker : Сергей Матвеенко
        work_place : DataArt
@@ -320,7 +320,7 @@
        work_place : "юрисконсульт"
        theme : "Есть ли в интернете место авторскому праву?"
        is_discussion: 0     
-       speaker_ava: nan.jpg    
+       speaker_ava: tw_andreev.png
      "16:00" :
        speaker : Станислав Салангин
        work_place : "координатор СПб сообщества технических писателей"
@@ -338,12 +338,12 @@
        theme : "О чём вы никогда не догадаетесь пока не протестируете."
        is_discussion: 0     
        speaker_ava: ux_plotnikov.jpg  
-     #"16:00" :
-     #  speaker : Юрий Солоницын
-     #  work_place : ИСТ
-     #  theme : "Точка кипения мозга – защищаем пользователя от перегрузки информацией."
-     #  is_discussion: 1     
-     #  speaker_ava: nan.jpg 
+     "14:00" :
+       speaker : "Никита Ефимов"
+       work_place : "Selectel"
+       theme : "Информационные персоны, ч.2: С чего начать?"
+       is_discussion: 0     
+       speaker_ava: ux_efimov.png
      "15:00" :
        speaker : "Виктор Ерофеев"
        work_place :  "CG Projects Group"
@@ -352,7 +352,7 @@
        speaker_ava: ux_erofeev.png
      "16:00" :
        speaker : "Екатерина Юлина"
-       work_place :  "SEMrush"
+       work_place :  "-"
        theme : "Сватовство продукта с проектировщиком."
        is_discussion: 0     
        speaker_ava: ux_julina.jpg       
@@ -384,7 +384,7 @@
        work_place : "iChar"
        theme : "Почему кандидаты не проходят испытательный срок."
        is_discussion: 0     
-       speaker_ava: nan.jpg  
+       speaker_ava: hr_posledova.jpg
 
 - title: SPb e-Learning
   id: 14
@@ -399,7 +399,7 @@
        speaker_ava: nan.jpg    
      "14:00" :
        speaker : "Александр Лопарь"
-       work_place : "-"
+       work_place : "FunJet"
        theme : "Игрофикация процесса обучения в СДО (Кейс)."
        is_discussion: 0     
        speaker_ava: nan.jpg 
@@ -414,7 +414,7 @@
        work_place : "LMS-Tech"
        theme : "Структура БД Moodle и особенности работы с Moodle Data API."
        is_discussion: 0     
-       speaker_ava: nan.jpg    
+       speaker_ava: elearning_sazonov.jpeg
 
 - title: SPb SQA Group
   id: 15
@@ -431,13 +431,13 @@
        work_place : "Dino Systems"
        theme : "Dino Systems: Автоматизация тестирования телефонии: не как решение проблемы, а как построение процесса."
        is_discussion: 0     
-       speaker_ava: nan.jpg         
+       speaker_ava: sqa_babich.png
      "15:00" :
        speaker : Полина Острова
        work_place : "EPAM"
        theme : "Accessibility: from the development challenge to human rights."
        is_discussion: 0     
-       speaker_ava: nan.jpg 
+       speaker_ava: sqa_ostrova.png
      "16:00" :
        speaker : "Антон Шапин"
        work_place : "EPAM"
