--- a/_data/itgm6_infopartners.yml
+++ b/_data/itgm6_infopartners.yml
@@ -98,6 +98,11 @@
   desc: 
   logo: ichar.png
 
+- title: "Reg.ru"
+  link: https://www.reg.ru/
+  desc: 
+  logo: regru_logo.png  
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
