--- a/_data/itgm6_infopartners.yml
+++ b/_data/itgm6_infopartners.yml
@@ -38,10 +38,10 @@
   desc: 
   logo: kechinov.png
 
-# - title: Ай-Ти События
-#   link: http://it-sobytie.ru/
-#   desc: 
-#   logo: /itgm/assets/images/logos/itsob.png
+- title: RubyNoName
+  link: http://rubynoname.ru/
+  desc: 
+  logo: rubynoname.jpg
 
 - title: "Сын Программиста"
   link: https://vk.com/proger_baby
