selectel url updated

--- a/_data/itgm6_sponsors.yml
+++ b/_data/itgm6_sponsors.yml
@@ -65,7 +65,7 @@
   logo: semrush_2.png
 
 - title: Selectel
-  link: http://www.selectel.ru/
+  link: "https://selectel.ru/?utm_campaign=selectel_sponsor&utm_medium=display&utm_source=itgm&utm_content=logo&utm_term=event"
   desc: 
   level: Серебряный партнер
   logo: selectel.png
