--- a/_data/itgm6_communities.yml
+++ b/_data/itgm6_communities.yml
@@ -372,7 +372,7 @@
       speakers:
         - name: "Анатолий Суздальцев"
           work_place: "CEO KdZen, Inc."
-          avatar: nan.jpg         
+          avatar: coa_suzdalcev.png         
     - start: "16:00"
       end: "16:20"       
       theme : "Кто отвечает за качество? (блиц)"
