--- a/_data/itgm7_sponsors.yml
+++ b/_data/itgm7_sponsors.yml
@@ -2,25 +2,25 @@
   link: http://piter-united.ru/main.html
   desc: Объединение активистов ИТ сообществ Санкт-Петербурга
   level: Организатор
-  logo: ../img/partners/partners/pu.png
+  logo: /img/partners/partners/pu.png
 
 - title: Петер Сервис
   link: http://www.billing.ru/
   desc: 
   level: Золотой партнер
-  logo: ../img/partners/partners/peterservice-01.jpg
+  logo: /img/partners/partners/peterservice-01.png
 
 - title: EPAM
   link: http://www.epam-group.ru/
   desc: 
   level: Золотой партнер
-  logo: ../img/partners/partners/epam-01.png
+  logo: /img/partners/partners/epam-01.png
 
 - title: DINO Systems
   link: http://www.dins.ru/
   desc: 
   level: Серебряный партнер
-  logo: ../img/partners/partners/dins-01.png
+  logo: /img/partners/partners/dins-01.png
 
 # - title: First Line Software
 #   link: http://www.firstlinesoftware.com/
@@ -98,4 +98,4 @@
   link: mailto:piterunited@gmail.com
   desc: 
   level: Хотите стать партнером?
-  logo: ../img/partners/newpartner.png
+  logo: /img/partners/newpartner.png
