--- a/_data/itgm7_photos.yml
+++ b/_data/itgm7_photos.yml
@@ -1,14 +1,14 @@
-- photo: img/thumb1.png
-- photo: img/thumb2.png
-- photo: img/thumb3.png
-- photo: img/thumb4.png
-- photo: img/thumb5.png
-- photo: img/thumb6.png
-- photo: img/thumb7.png
-- photo: img/thumb8.png
-- photo: img/thumb9.png
-- photo: img/thumb10.png
-- photo: img/thumb11.png
-- photo: img/thumb12.png
-- photo: img/thumb13.png
-- photo: img/thumb14.png
+- photo: img/events/past/thumb1.png
+- photo: img/events/past/thumb2.png
+- photo: img/events/past/thumb3.png
+- photo: img/events/past/thumb4.png
+- photo: img/events/past/thumb5.png
+- photo: img/events/past/thumb6.png
+- photo: img/events/past/thumb7.png
+- photo: img/events/past/thumb8.png
+- photo: img/events/past/thumb9.png
+- photo: img/events/past/thumb10.png
+- photo: img/events/past/thumb11.png
+- photo: img/events/past/thumb12.png
+- photo: img/events/past/thumb13.png
+- photo: img/events/past/thumb14.png
