(ITGM#7) программу сообществ расширил и добавил атрибуты недостающие (из верстки перенес)

--- a/_data/itgm7_programms.yml
+++ b/_data/itgm7_programms.yml
@@ -1,19 +1,39 @@
-- title: Регистрация участников
-  id: Program1
+- id: Program1
+  title: Регистрация участников и приветственный кофе
+  text: Хороший день начинается с чашечки кофе (или чая). Не упустите возможность в непринужденной обстановке познакомиться с новыми людьми.
   time: "11:00 - 12:00"
+  duration: 1h
+  place: холл
+  logo: img/programs/clock_11_00.png
 
-- title: Ярмарка сообществ и нетворкинг
-  id: Program2
+- id: Program2
+  title: Ярмарка сообществ и нетворкинг
+  text: На каждом островке будут присутствовать активисты сообществ, которые расскажут Вам о сообществе, регулярных встречах, он-лайн площадках для общения и программе на сегодня.
   time: "12:00 - 12:45"
+  duration: 45mins
+  place: вся доступная территория
+  logo: img/programs/clock_12_00.png
 
-- title: Открытие мероприятия
-  id: Program3
+- id: Program3
+  title: Официальное открытие мероприятия
+  text: Организаторы мероприятия поблагодарят партнеров, кратко расскажут о мероприятии, его целях и условиях конкурса, в котором будет участвовать каждый из вас.
   time: "12:45 - 13:00"
+  duration: 15mins
+  place: большой зал
+  logo: img/programs/clock_12_45.png
 
-- title: Общение на островках
-  id: Program4
+- id: Program4
+  title: Общение на островках сообществ
+  text: Все общение на островках будет разбито на сорокапятиминутные (45 мин.) временные секции (13.00-13.45, 14.00-14.45 и т.д.) с пятнадцатиминутными (15 мин.) перерывами между ними.
   time: "13:00 - 17:00"
+  duration: 4h (4x45mins)
+  place: островки сообществ
+  logo: img/programs/clock_13_00.png
 
-- title: Закрытие и развлекательная программа
-  id: Program5
+- id: Program5
+  title: Закрытие мероприятия
+  text: Завершим мы мероприятие подведением итогов.
   time: "17:00 - 18:00"
+  duration: 1h
+  place: большой зал
+  logo: img/programs/clock_17_00.png
